--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                         <p class="model-category"> Safety scores, fuel economy, cargo capacity and feature availability should all be factors in determining whether the 2024 Trailblazer is a good car for you.</p>
 
-                        <a href='#' class="more-details"><b>More details</b></a>
+                        <a href='file:///D:/project/Trailblazer.html' class="more-details"><b>More details</b></a>
                 </div>
             </div>
         </div>
