--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                         <p class="model-category">Blazer equipped with a trendsetting design, spacious seating, twin-clutch advanced all-wheel-drive, and Chevy Safety Assist.</p>
 
-                        <a href='file:///D:/project/Chevrolet-Blazer.html' class="more-details"><b>More details</b></a>
+                        <a href="file:///D:/project/Chevrolet-Blazer.html" class="more-details"><b>More details</b></a>
                 </div>
             </div>
         </div>
