--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                         <p class="model-category">Blazer equipped with a trendsetting design, spacious seating, twin-clutch advanced all-wheel-drive, and Chevy Safety Assist.</p>
 
-                        <a href="file:///D:/project/Chevrolet-Blazer.html" class="more-details"><b>More details</b></a>
+                        <a href="Chevrolet-Blazer.html" class="more-details"><b>More details</b></a>
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
 
                         <p class="model-category"> Safety scores, fuel economy, cargo capacity and feature availability should all be factors in determining whether the 2024 Trailblazer is a good car for you.</p>
 
-                        <a href='file:///D:/project/Trailblazer.html' class="more-details"><b>More details</b></a>
+                        <a href='Trailblazer.html' class="more-details"><b>More details</b></a>
                 </div>
             </div>
         </div>
