--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
         </div>
         <div class="model-card">
             <div class="model-image">
-                <img src="images/2024-chevrolet-trailblazer-rs-awd-155-658096004ce7b.png">
+                <img src="https://yourwebsite.github.io/project-folder/images/2024-chevrolet-trailblazer-rs-awd-155-658096004ce7b.png">
+
                 <div class="model-info">
                     <strong class="model-title">
                     <span>Chevrolet Trailblazer</span>
